Initial UI update: moves scale bar. adds keybinds, and correctly adjusts jumpto time

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -141,6 +141,11 @@ body {
     -webkit-transition: opacity 250ms ease, max-height 250ms ease, margin-top 250ms ease;
 }
 
+#overlay-data {
+    background-color: rgba(5, 10, 30, 0.85);
+    border-radius: 0.5rem/0.5rem;
+}
+
 #menu.invisible {
     margin-top: 0;
     padding: 0 1rem 0 1rem;
